--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce Bootstrap</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light ">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,9 +18,9 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Shoes</a>
-                  <a class="nav-link" href="#">Backpack</a>
-                  <a class="nav-link" href="#">Subscribe</a>
+                  <a class="nav-link" href="#Shoes">Shoes</a>
+                  <a class="nav-link" href="#Backpack">Backpack</a>
+                  <a class="nav-link" href="#subscribe">Subscribe</a>
                 </div>
               </div>
             </div>
@@ -76,7 +77,117 @@
             </a>
           </div>
     </header>
-
-    <script src="js/bootstrap.min.js"></script>
+    <main class="container">
+      <section class="container overflow-hidden mt-5 categories">
+        <div class="row g-5">
+          <div class="col-md-4">
+           <div class="p-3 rounded d-flex align-items-center justify-content-around categories1">
+             <h1 class="text-white">Watch</h1>
+             <img src="images/categories/watch.png" alt="">
+           </div>
+          </div>
+          <div class="col-md-4">
+            <div class="p-3 rounded d-flex align-items-center justify-content-around categories2">
+              <h1 class="text-white">Bag</h1>
+              <img src="images/categories/bag.png" alt="">
+            </div>
+           </div>
+           <div class="col-md-4">
+            <div class="p-3 rounded  d-flex align-items-center justify-content-around categories3">
+              <h1 class="text-white">Shoe</h1>
+              <img src="images/categories/shoes.png" alt="">
+            </div>
+           </div>
+        </div>
+      </section>
+      <section id="Shoes" class="mt-5">
+        <h3>Shoes</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+         <div class="col">
+          <div class="card panda-card h-100 shadow">
+            <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Supply 350</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam porro veniam, culpa aperiam accusamus nisi.</p>
+              <h5>$120</h5>
+              <button class="buy-now-button">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card panda-card h-100 shadow">
+            <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Nike 360</h5>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis facere, quasi laudantium reprehenderit maxime earum.</p>
+              <h5>$320</h5>
+              <button class="buy-now-button">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card panda-card h-100 shadow">
+            <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Airmax</h5>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore esse, rem reiciendis ab quod!</p>
+              <h5>$350</h5>
+              <button class="buy-now-button">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+      <section id="Backpack" class="mt-5">
+        <h3>Backpack</h3>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+         <div class="col">
+          <div class="card panda-card h-100 shadow">
+            <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Red Backpack</h5>
+              <h5>$120</h5>
+              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam porro veniam, culpa aperiam accusamus nisi.</p>
+              <button class="buy-now-button">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card panda-card h-100 shadow">
+            <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Blue Backpack</h5>
+              <h5>$320</h5>
+              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis facere, quasi laudantium reprehenderit maxime earum.</p>
+              <button class="buy-now-button">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card panda-card h-100 shadow">
+            <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Black Backpack</h5>
+              <h5>$169</h5>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore esse, rem reiciendis ab quod!</p>
+              <button class="buy-now-button">Buy Now >></button>
+            </div>
+          </div>
+        </div>
+        </div>
+      </section>
+      <section style ="height:300px" class="container d-flex align-items-center justify-content-center orange-bg mt-5" id="subscribe">
+       <div>
+        <h1>LET'S KEEP IN TOUCH</h1>
+        <h6>Get updates on sales,specials and more.</h6>
+        <input class="form-control" type="text">
+        <button class="buy-now-button">SUBMIT</button>
+       </div>
+      </section>
+    </main>
+    <footer class="text-center mt-5">
+      <small>&copy;copyright 2021 panda commerce.All rights reserved.Sofia, Bulgaria.</small>
+    </footer>
+  <script src="js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> 
