--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 <div class="row align-items-center">
                   <div class="col-md-7">
                     <h1>Cool Dude Headphone</h1>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum?</p>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum?
+                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum?
+                        </p>
                         <h1 class="price">$420</h1>
                         <button class="buy-now-button">Buy Now</button>
                   </div>
