--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce Bootstrap</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
             </div>
           </nav>
           <div id="carouselExampleControls" class="carousel slide orange-bg" data-bs-ride="carousel">
-            <div class="carousel-inner">
+            <div class="carousel-inner mt-5">
               <div class="carousel-item active">
                 <div class="row align-items-center">
                   <div class="col-md-7">
@@ -45,7 +46,6 @@
                   <div class="col-md-7">
                     <h1>Cool Dude Headphone</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum?
-                          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum?
                         </p>
                         <h1 class="price">$420</h1>
                         <button class="buy-now-button">Buy Now</button>
@@ -60,7 +60,7 @@
                 <div class="col-md-7">
                   <h1>X-Box for your living room</h1>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ex, harum?</p>
-                  <h1 class="price">600</h1>
+                  <h1 class="price">$600</h1>
                   <button class="buy-now-button">Buy Now</button>
                 </div>
                 <div class="col-md-5">
@@ -80,7 +80,7 @@
           </div>
     </header>
     <main class="container">
-      <section class="container overflow-hidden mt-5 categories">
+      <section class="container overflow-hidden categories">
         <div class="row g-5">
           <div class="col-md-4">
            <div class="p-3 rounded d-flex align-items-center justify-content-around categories1">
@@ -102,17 +102,17 @@
            </div>
         </div>
       </section>
-      <section id="Shoes" class="mt-5">
-        <h3>Shoes</h3>
+      <section id="Shoes" class="p-5">
+        <h1 class="shoe">Shoes</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
          <div class="col">
           <div class="card panda-card h-100 shadow">
             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Supply 350</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam porro veniam, culpa aperiam accusamus nisi.</p>
-              <h5>$120</h5>
-              <button class="buy-now-button">Buy Now >></button>
+              <p class="card-text mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam porro veniam, culpa aperiam accusamus nisi.</p>
+              <h5 class="mt-5">$120</h5>
+              <button class="buy-now-button">Buy Now</button>
             </div>
           </div>
         </div>
@@ -121,9 +121,9 @@
             <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Nike 360</h5>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis facere, quasi laudantium reprehenderit maxime earum.</p>
-              <h5>$320</h5>
-              <button class="buy-now-button">Buy Now >></button>
+              <p class="card-text mt-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis facere, quasi laudantium reprehenderit maxime earum.</p>
+              <h5 class="mt-5">$320</h5>
+              <button class="buy-now-button">Buy Now</button>
             </div>
           </div>
         </div>
@@ -132,25 +132,25 @@
             <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Airmax</h5>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore esse, rem reiciendis ab quod!</p>
-              <h5>$350</h5>
-              <button class="buy-now-button">Buy Now >></button>
+              <p class="card-text mt-5">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore esse, rem reiciendis ab quod!</p>
+              <h5 class="mt-5">$350</h5>
+              <button class="buy-now-button">Buy Now</button>
             </div>
           </div>
         </div>
         </div>
       </section>
-      <section id="Backpack" class="mt-5">
-        <h3>Backpack</h3>
+      <section id="Backpack" class="p-5">
+        <h1 class="backpack">Backpack</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
          <div class="col">
           <div class="card panda-card h-100 shadow">
             <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Red Backpack</h5>
-              <h5>$120</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam porro veniam, culpa aperiam accusamus nisi.</p>
-              <button class="buy-now-button">Buy Now >></button>
+              <h5 class="mt-4">$120</h5>
+              <p class="card-text mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam porro veniam, culpa aperiam accusamus nisi.</p>
+              <button class="buy-now-button">Buy Now</button>
             </div>
           </div>
         </div>
@@ -159,9 +159,9 @@
             <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Blue Backpack</h5>
-              <h5>$320</h5>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis facere, quasi laudantium reprehenderit maxime earum.</p>
-              <button class="buy-now-button">Buy Now >></button>
+              <h5  class="mt-4">$320</h5>
+              <p class="card-text mt-2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis facere, quasi laudantium reprehenderit maxime earum.</p>
+              <button class="buy-now-button">Buy Now</button>
             </div>
           </div>
         </div>
@@ -170,9 +170,9 @@
             <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Black Backpack</h5>
-              <h5>$169</h5>
-              <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore esse, rem reiciendis ab quod!</p>
-              <button class="buy-now-button">Buy Now >></button>
+              <h5 class="mt-4">$169</h5>
+              <p class="card-text mt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam inventore esse, rem reiciendis ab quod!</p>
+              <button class="buy-now-button">Buy Now</button>
             </div>
           </div>
         </div>
@@ -183,12 +183,17 @@
         <h1>LET'S KEEP IN TOUCH</h1>
         <h6>Get updates on sales,specials and more.</h6>
         <input class="form-control" type="text">
-        <button class="buy-now-button">SUBMIT</button>
+        <button class="buy-now-button mt-3">SUBMIT</button>
        </div>
       </section>
+      <section class="text-center mt-5">
+        <a href="https://www.facebook.com/" class="fab fa-facebook icon m-4"></a>
+        <a href="https://www.twitter.com/"  class="fab fa-twitter  icon m-4"></a>
+        <a href="https://www.linkedin.com/"  class="fab fa-linkedin  icon m-4"></a>
+       </section>
     </main>
     <footer class="text-center mt-5">
-      <small>&copy;copyright 2021 panda commerce.All rights reserved.Sofia, Bulgaria.</small>
+      <small>&copy;copyright 2021 panda commerce.</small>
     </footer>
   <script src="js/bootstrap.min.js"></script>
 </body>
